# arusti

./: Cargo.toml  README.md
arusti/: Cargo.toml  README.md
arusti/src/: autojudge.rs  datagen.rs
arusti/src/arusti/: arusti.rs  data_generation.rs  types.rs
arusti/src/arusti/olan/: figure_defs.rs  mod.rs  olan.pest  parser.rs
arusti/tests/: full_sequence.rs  olan_tests.rs
pyarusti/: Cargo.toml
pyarusti/src/: lib.rs
src/: datagen.rs
src/arusti/: arusti.rs  types.rs
src/arusti/olan/: figure_defs.rs  main_figures.rs  mod.rs  olan.pest  parser.rs
test/: sequence.arusti
tests/: full_sequence.rs
tests/resources/: Example.seq  sequence.olan
