[package]
name = "autojudge"
version = "0.1.0"
authors = ["Robert Clarke <r.95clarke@gmail.com>"]
edition = "2018"

[dependencies]
nalgebra = "0.21.0"
pest = "2.1.3"
pest_derive = "2.1.0" 

[lib]
name = "arusti"
path = "src/arusti/arusti.rs"

[[bin]]
name = "autojudge"
path = "src/autojudge.rs"

[[bin]]
name = "datagen"
path = "src/datagen.rs"