[package]
name = "arusti"
version = "0.1.0"
authors = ["Robert Clarke <r.95clarke@gmail.com>"]
edition = "2018"

[dependencies]
nalgebra = "0.21.0"
pest = "2.1.3"
pest_derive = "2.1.0"
log = "0.4.8"
roxmltree = "0.11.0"
env_logger = "*"
test-env-log = "0.2.7"
itertools = "*"

[lib]
name = "arusti"
path = "src/arusti/arusti.rs"