[package]
name = "pyarusti"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arusti = { path = "../arusti" }

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[lib]
name = "pyarusti"
crate-type = ["cdylib"]
